[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/2d/chainthing.png" type="Texture" id=2]
[ext_resource path="res://objects/UI/WinScreen/metals.ogg" type="AudioStream" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0
margin_bottom = -940.0
script = ExtResource( 1 )

[node name="Back" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = -22.2135
margin_right = 150.0
margin_bottom = 277.787
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 86.0059
margin_right = 20.0
margin_bottom = 100.006
text = "PAUSE"

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = 148.489
margin_right = 31.5
margin_bottom = 168.489
text = "RESUME"
flat = true

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = 180.0
margin_right = 33.5
margin_bottom = 200.0
text = "RESTART"
flat = true

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = 210.0
margin_right = 31.5
margin_bottom = 230.0
text = "QUIT"
flat = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
